--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/framework-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.20",
         "symfony/security-bundle": "5.1.*",
+        "symfony/serializer": "5.1.*",
         "symfony/stopwatch": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
         "symfony/validator": "5.1.*",
